--- a/style.css
+++ b/style.css
@@ -1,23 +1,16 @@
 /*
-Theme Name: _Underscores
-Theme URI: http://underscores.me/
-Author: Automattic
-Author URI: http://automattic.com/
-Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
-Version: 1.0.0
+Theme Name: Cambridge Glass Light
+Theme URI: http://arijit.com/
+Author: Arijit Sadhu
+Author URI: http://arijit.com/
+Description: Simple modern HTML5 responisve theme suitable for photo galleries based on Underscores theme.
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: _Underscores
+Text Domain: cambridge_glass_light
 Tags:
 
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-
-_s is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
+This theme is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
 /*--------------------------------------------------------------
@@ -150,7 +143,7 @@ svg:not(:root) {
 }
 
 figure {
-	margin: 1em 40px;
+	margin: 0;
 }
 
 hr {
@@ -266,7 +259,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: Tahoma, Geneva, sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
@@ -375,7 +368,7 @@ hr {
 
 ul,
 ol {
-	margin: 0 0 1.5em 3em;
+	/*margin: 0 0 1.5em 3em;*/
 }
 
 ul {
@@ -389,7 +382,6 @@ ol {
 li > ul,
 li > ol {
 	margin-bottom: 0;
-	margin-left: 1.5em;
 }
 
 dt {
@@ -417,25 +409,20 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
+	border: 1px solid silver;
 	border-radius: 3px;
-	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	font-size: 12px;
-	font-size: 0.75rem;
-	line-height: 1;
-	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+	background: white;
+	transition: background .25s ease-in-out;
+	-moz-transition: background .25s ease-in-out;
+	-webkit-transition: background .25s ease-in-out;
 }
 
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-	border-color: #ccc #bbb #aaa;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
+	background: silver;
+
 }
 
 button:focus,
@@ -446,8 +433,7 @@ button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
-	border-color: #aaa #bbb #bbb;
-	box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+	border-color: silver;
 }
 
 input[type="text"],
@@ -466,14 +452,15 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: #666;
-	border: 1px solid #ccc;
+	color: grey;
+	border: 1px solid silver;
 	border-radius: 3px;
 	padding: 3px;
 }
 
 select {
-	border: 1px solid #ccc;
+	border: 2px solid silver;
+	border-radius: 3px;
 }
 
 input[type="text"]:focus,
@@ -506,21 +493,23 @@ textarea {
 ## Links
 --------------------------------------------------------------*/
 a {
-	color: royalblue;
-}
+	text-decoration: none;
+	color: black;
+	transition: color .25s ease-in-out;
+	-moz-transition: color .25s ease-in-out;
+	-webkit-transition: color .25s ease-in-out;}
 
 a:visited {
-	color: purple;
+	color: black;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: midnightblue;
+	color: grey;
 }
 
 a:focus {
-	outline: thin dotted;
 }
 
 a:hover,
@@ -531,11 +520,44 @@ a:active {
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
-.main-navigation {
-	clear: both;
-	display: block;
-	float: left;
+.site-header {
+	min-height: 3.5em;
+}
+
+.site-header p {
+	margin: 0;
+}
+
+.site-header img {
 	width: 100%;
+}
+
+.site-title {
+	display: block;
+	width: 100%;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	color: black;	
+	position:fixed;
+	z-index: 99999;
+	padding: 1em;
+	font-weight: bold;
+}
+
+.site-description {
+	position: absolute;
+	top: 4em;
+	width: 100%;
+    text-align: center;
+}
+
+.main-navigation {
+	display: block;
+	float: right;
+	right: 0;
+	position:fixed;
+	z-index: 99999;
 }
 
 .main-navigation ul {
@@ -553,15 +575,22 @@ a:active {
 .main-navigation a {
 	display: block;
 	text-decoration: none;
+	color: black;	
+	padding: 1em;
+	transition: background .25s ease-in-out;
+	-moz-transition: background .25s ease-in-out;
+	-webkit-transition: background .25s ease-in-out;
 }
 
 .main-navigation ul ul {
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
-	top: 1.5em;
+	top: 3.5em;
 	left: -999em;
 	z-index: 99999;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 .main-navigation ul ul ul {
@@ -579,6 +608,7 @@ a:active {
 
 .main-navigation li:hover > a,
 .main-navigation li.focus > a {
+	background: silver;
 }
 
 .main-navigation ul ul :hover > a,
@@ -587,16 +617,6 @@ a:active {
 
 .main-navigation ul ul a:hover,
 .main-navigation ul ul a.focus {
-}
-
-.main-navigation ul li:hover > ul,
-.main-navigation ul li.focus > ul {
-	left: auto;
-}
-
-.main-navigation ul ul li:hover > ul,
-.main-navigation ul ul li.focus > ul {
-	left: 100%;
 }
 
 .main-navigation .current_page_item > a,
@@ -611,35 +631,85 @@ a:active {
 	display: block;
 }
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 600px) {
 	.menu-toggle {
 		display: none;
 	}
 	.main-navigation ul {
 		display: block;
 	}
+
+	.main-navigation ul li:hover > ul,
+	.main-navigation ul li.focus > ul {
+		left: auto;
+	}
+
+	.main-navigation ul ul li:hover > ul,
+	.main-navigation ul ul li.focus > ul {
+		left: 100%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.menu-toggle {
+		background-color: transparent;
+		border: none;
+		padding: 1em;
+	}
+	.main-navigation ul {
+		position: fixed;
+		top: 3.5em;
+		width: 100%;
+		left: 0;
+		background: rgb(255, 255, 255);
+		background: rgba(255, 255, 255, 0.7);
+		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	}
+	.main-navigation li {
+		float: none;
+	}
+	.main-navigation ul ul {
+		float: none;
+		position: relative;
+		top: 0em;
+		left: 0.5em;
+	}
+	.main-navigation ul ul a {
+	}
 }
 
 .site-main .comment-navigation,
 .site-main .posts-navigation,
 .site-main .post-navigation {
-	margin: 0 0 1.5em;
+	margin: 0 0 3.5em;
 	overflow: hidden;
 }
 
+.image-navigation .nav-previous,
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
 	float: left;
 	width: 50%;
+	padding:0 20px 0 10px;
+	background:url(images/prev-img.gif) no-repeat center right;
 }
 
+.image-navigation .nav-next,
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
 	float: right;
 	text-align: right;
 	width: 50%;
+	padding:0 20px 0 10px;
+	background:url(images/next-img.gif) no-repeat center right;
+}
+
+.image-navigation .nav-previous,
+.image-navigation .nav-next {
+	font-size: xx-large;
+	font-weight: bolder;
 }
 
 /*--------------------------------------------------------------
@@ -734,7 +804,11 @@ a:active {
 # Widgets
 --------------------------------------------------------------*/
 .widget {
-	margin: 0 0 1.5em;
+	/*margin: 0 0 1.5em;*/
+}
+
+.widget-title {
+	font-size: smaller;
 }
 
 /* Make sure select elements fit in widgets. */
@@ -753,7 +827,6 @@ a:active {
 }
 
 .hentry {
-	margin: 0 0 1.5em;
 }
 
 .byline,
@@ -769,7 +842,7 @@ a:active {
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 1.5em;
 }
 
 .page-links {
@@ -777,9 +850,75 @@ a:active {
 	margin: 0 0 1.5em;
 }
 
+.entry-header {
+	padding: 1em;
+}
+
+.home .entry-title {
+	padding: .25em;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	margin: 0;
+}
+
+.has-post-thumbnail .entry-header {
+	position: relative;
+	overflow: hidden;
+	height: 200px;
+	width: 100%;
+	padding: 0;
+}
+
+.home .entry-header {
+	float: left;
+	height: auto;
+	width: 50%;
+	padding: 0;
+}
+
+@media screen and (max-width: 600px) {
+	.home .entry-header {
+		width: 100%;
+	}
+}
+
+.has-post-thumbnail .entry-title {
+	position: absolute;
+	top: 0;
+	padding: .25em;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	margin: 0;
+}
+
+.has-post-thumbnail .entry-meta {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding: .25em;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+.entry-header .attachment-post-thumbnail {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+}
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
+.comments-area {
+	padding: 1em;
+}
+
 .comment-content a {
 	word-wrap: break-word;
 }
@@ -892,3 +1031,36 @@ object {
 .gallery-caption {
 	display: block;
 }
+
+.content-area {
+	float: left;
+	width: 75%;
+}
+
+.site-main {
+}
+
+.site-content .widget-area {
+	float: right;
+	overflow: hidden;
+	width: 25%;
+	padding: 1em;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+.site-footer {
+	clear: both;
+	width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+	.content-area {
+		width: 100%;
+	}
+	.site-content .widget-area {
+		width: 100%;
+	}
+}
+
