--- a/style.css
+++ b/style.css
@@ -417,8 +417,9 @@ input[type="reset"],
 input[type="submit"] {
 	color: black;
 	padding: 5px 15px 5px 15px;
-	border: 2px solid grey;
+	border: 2px solid deepskyblue;
 	border-radius: 1em;
+	box-shadow: 0 0 2px 2px deepskyblue;
 	background: white;
 	transition: background .25s ease-in-out;
 	-moz-transition: background .25s ease-in-out;
@@ -429,7 +430,8 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-	background: lightgrey;
+	border: 2px solid gold;
+	box-shadow: 0 0 2px 2px gold;
 
 }
 
@@ -441,7 +443,8 @@ button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
-	border-color: grey;
+	border: 2px solid gold;
+	box-shadow: 0 0 2px 2px gold;
 }
 
 input[type="text"],
@@ -461,13 +464,15 @@ input[type="datetime-local"],
 input[type="color"],
 textarea {
 	color: black;
-	border: 2px solid grey;
+	border: 2px solid deepskyblue;
+	box-shadow: 0 0 2px 2px deepskyblue;
 	border-radius: 1em;
 	padding: 5px;
 }
 
 select {
-	border: 2px solid grey;
+	border: 2px solid deepskyblue;
+	box-shadow: 0 0 2px 2px deepskyblue;
 	border-radius: 1em;
 }
 
@@ -514,7 +519,7 @@ a:visited {
 a:hover,
 a:focus,
 a:active {
-	color: grey;
+	border-bottom: 2px solid gold;
 }
 
 a:focus {
@@ -545,10 +550,11 @@ a:active {
 
 .site-branding img {
 	width: auto;
-	position: absolute;
-	opacity: 0.7;
-	max-height: 100%;
+	position: fixed;
+  margin: unset;
+  z-index: 90000;
 }
+
 
 .site-title {
 	display: block;
@@ -558,8 +564,8 @@ a:active {
 	border-bottom: 1px solid silver;
 	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 	position:fixed;
-	z-index: 99999;
-	padding: 1em;
+	z-index: 80000;
+	padding: 1em 4em;
 	font-weight: bold;
 }
 
@@ -641,7 +647,7 @@ a:active {
 
 .main-navigation li:hover > a,
 .main-navigation li.focus > a {
-	border-bottom: 5px solid grey;
+	border-bottom: 5px solid gold;
 }
 
 .main-navigation ul ul :hover > a,
@@ -679,49 +685,51 @@ a:active {
 
 .main-navigation ul ul li:hover > a,
 .main-navigation ul ul li.focus > a {
-	border-left: 5px solid grey;
+	border-left: 5px solid gold;
 	border-bottom: none;
 }
 
-@media screen and (max-width: 700px) {
-	.menu-toggle {
-		display: block;
-		background-color: transparent;
-		border: none;
-		padding: 1em;
-		margin: 0;
-		border-left: 1px solid silver;
-		border-radius: 0;
-	}
-	.main-navigation ul {
-		display: none;
-		position: fixed;
-		width: 100%;
-		left: 0;
-		background: rgb(255, 255, 255);
-		background: rgba(255, 255, 255, 0.7);
-		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-		border-bottom: 1px solid silver;
-	}
-	.main-navigation li {
-		float: none;
-		border-top: 1px solid silver;
-	}
-	.main-navigation ul ul {
-		float: none;
-		position: relative;
-		top: 0em;
-		left: 0.5em;
-	}
-	.main-navigation ul ul a {
-	}
+/* forced mobile menu */
 
-	.main-navigation li:hover > a,
-	.main-navigation li.focus > a {
-		border-left: 5px solid grey;
-		border-bottom: none;
-	}
+.menu-toggle {
+	display: block;
+	background-color: transparent;
+	border: none;
+	padding: 1em;
+	margin: 0;
+	border-left: 1px solid silver;
+	border-radius: 0;
+	box-shadow: unset;
 }
+.main-navigation ul {
+	display: none;
+	position: fixed;
+	width: 300;
+	right: 0;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+	border-bottom: 1px solid silver;
+}
+.main-navigation li {
+	float: none;
+	border-top: 1px solid silver;
+}
+.main-navigation ul ul {
+	float: none;
+	position: relative;
+	top: 0em;
+	left: 0.5em;
+}
+.main-navigation ul ul a {
+}
+
+.main-navigation li:hover > a,
+.main-navigation li.focus > a {
+	border-left: 5px solid gold;
+	border-bottom: none;
+}
+
 
 .site-main .comment-navigation,
 .site-main .posts-navigation,
@@ -857,7 +865,7 @@ a:active {
 
 .widget-title {
 	font-size: medium;
-	border-bottom: 1px solid silver;
+	border-bottom: 2px solid white;
 }
 
 /* Make sure select elements fit in widgets. */
@@ -1093,14 +1101,14 @@ object {
 	width: 100%;
 	clear: both;
 	overflow: hidden;
-	border-top: 1px solid silver;
 	padding: 4em;
-	color: silver;
-	background: grey;
+	color: white;
+	background: deepskyblue;
+	box-shadow: 0 0 1em 1em deepskyblue;
 }
 
-.site-content .widget-area a:hover {
-	color: silver;
+.site-content .widget-area a {
+	color: white;
 }
 
 .site-footer {
@@ -1110,12 +1118,12 @@ object {
 	width: 100%;
 	text-align: center;
 	padding: 2em;
-	color: grey;
-	background: silver;
+	color: white;
+	background: goldenrod;
 }
 
 .site-footer a {
-	color: grey;
+	color: white;
 }
 
 .edit-link {
